--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>IRYL Toko Badminton</title>
+    <title>Toko Peralatan Badminton</title>
     <!-- include google material icons and .css file -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" type="text/css" />
@@ -12,9 +12,9 @@
     <!-- page header -->
     <header>
       <div id="logo">
-        <img src="images/logo.png" alt="IRYL Logo" height="100" />
+        <img src="images/logo.png" alt="Logo Toko" height="100" />
       </div>
-      <h2>IRYL Toko Badminton</h2>
+      <h2>Toko Peralatan Badminton</h2>
       <div id="user-options">
         <i class="material-icons md-36">search</i>
         <i class="material-icons md-36">shopping_cart</i>
@@ -149,7 +149,7 @@
 
         <div id="footer-logo">
           <img src="images/logo.png" alt="SMASH logo" height="50" />
-          <h3>&copy; 2025 IRYL Toko Badminton</h3>
+          <h3>&copy; Toko Peralatan Badminton</h3>
         </div>
 
         <div id="footer-subscribe">
